welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ';' expected but ',' found.
      case Direction.EST => gauche(); avance(), gauche()
                                              ^